--- a/Quiz-answer.html
+++ b/Quiz-answer.html
@@ -134,7 +134,7 @@
     </div>
 
 
-    <div class="Quiz-page-section">
+    <div class="Quiz-answer-page-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-4 col-sm-12 order-2 order-lg-1  order-md-1">
@@ -187,35 +187,42 @@
                     </aside>
                 </div>
                 <div class="col-lg-8 col-md-8 col-sm-12 order-1 order-lg-2  order-md-2">
-                    <div class="Quiz-right-section">
+                    <div class="Quiz-answer-right-section">
                         <div class="Quiz-que-box">
                             <div class="Quiz-title">
-                                <p><a href="Quiz-answer.html">Single choice question will some here</a></p>
+                                <p><a href="">Single choice question will come here</a></p>
                             </div>
                             <form action="">
-                                <div class="input-box">
-
-                                    <input class="" type="radio" id="Answer 1" name="answer" value="Answer 1">
-                                    <label for="Answer 1" class="col-11">Answer 1 will come here answer 1 Answer 1 will
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1 Answer 1 will
                                         come here
-                                        answer</label><br>
+                                        answer</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar " style="width: 60%">60%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-
-                                    <input type="radio" id="Answer 2" name="answer" value="Answer 2">
-                                    <label class="col-11" for="Answer 2">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 20%">20%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-                                    <input type="radio" id="Answer 3" name="answer" value="Answer 3">
-                                    <label for="Answer 3" class="col-11">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 15%">15%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-                                    <input type="radio" id="Answer 4" name="answer" value="Answer 4">
-                                    <label for="Answer 4" class="col-11">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 10%">10%</div>
+                                    </div>
                                 </div>
-
-
-                                <button onclick="location.href='Quiz-answer.html'">Submit</button>
                             </form>
 
                         </div>
@@ -225,16 +232,20 @@
                                 <p><a href="">True/False question will come here</a></p>
                             </div>
                             <form action="">
-                                <div class=" input-box">
-                                    <input type="radio" id="True" name="answer" value="True">
-                                    <label for="True" class="col-11">True</label><br>
+                                <div class="progress-setion-box">
+                                    <div>True</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 60%">60%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-                                    <input type="radio" id="False" name="answer" value="False">
-                                    <label for="False" class="col-11">False</label><br>
+                                <div class="progress-setion-box">
+                                    <div>False</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 40%">40%</div>
+                                    </div>
                                 </div>
-
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
                             </form>
 
                         </div>
@@ -244,37 +255,44 @@
                                 <p><a href="">Multiple choice question will come here</a></p>
                             </div>
                             <form action="">
-                                <div class="input-box">
-
-                                    <input type="checkbox" id="Answer 5" name="answer" value="Answer 5">
-                                    <label for="Answer 5" class="col-11">Answer 1 will come here answer 1 Answer 1 will
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1 Answer 1 will
                                         come here
-                                        answer</label><br>
+                                        answer</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar " style="width: 60%">60%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-
-                                    <input type="checkbox" id="Answer 6" name="answer" value="Answer 6">
-                                    <label for="Answer 6" class="col-11">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="20" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 20%">20%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-
-                                    <input type="checkbox" id="Answer 7" name="answer" value="Answer 7">
-                                    <label for="Answer 7" class="col-11">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="15" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 15%">15%</div>
+                                    </div>
                                 </div>
-                                <div class="input-box">
-
-                                    <input type="checkbox" id="Answer 8" name="answer" value="Answer 8">
-                                    <label for="Answer 8" class="col-11">Answer 1 will come here answer 1</label><br>
+                                <div class="progress-setion-box">
+                                    <div>Answer 1 will come here answer 1</div>
+                                    <div class="progress" role="progressbar" aria-label="Example with label"
+                                        aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+                                        <div class="progress-bar" style="width: 10%">10%</div>
+                                    </div>
                                 </div>
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
                             </form>
                         </div>
                         <!-- 4 -->
                         <div class="Quiz-que-box">
                             <div class="Quiz-title">
-                                <p><a href="">True/False question will come here</a></p>
+                                <p><a href="">Yes/no question will come here</a></p>
                             </div>
-                            <form action="">
+                            <form action="" class="p-0">
                                 <div class="input-box">
 
                                     <input type="radio" id="Yes" name="answer" value="Yes">
@@ -285,7 +303,7 @@
                                     <label for="No" class="col-11">No</label><br>
                                 </div>
 
-                                <button onclick="location.href='./Quiz-answer.html'">Submit</button>
+                                <button>Submit</button>
                             </form>
 
                         </div>
@@ -327,7 +345,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"
         integrity="sha384-fbbOQedDUMZZ5KreZpsbe1LCZPVmfTnH7ois6mU1QK+m14rQ1l2bGBq41eYeM/fS"
         crossorigin="anonymous"></script>
-        <script src="assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
